--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -79,7 +79,7 @@ body {
 
 .homeContainer.homeSnapshooterContainer {
     background-color: #434546;
-    background: url("../img/bg_snapshooter.jpg") center center repeat-x;
+    background: url("../img/bg_motherboard.jpg") center center repeat-x;
 }
 
 h1,
