--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -63,7 +63,21 @@ body {
 .navigationSlider .slidingNav ul li a:hover,
 .navigationSlider .slidingNav ul li.siteNavItemActive a,
 .navigationSlider .slidingNav ul li.siteNavGroupActive a {
-    color: #ffffff;
+    color: #000;
+    background-color: transparent;
+}
+.navigationSlider .slidingNav ul li.siteNavGroupActive a {
+    margin-right: -27px;
+}
+.navigationSlider .slidingNav ul li.siteNavGroupActive a:after {
+    content: '__';
+    position: relative;
+    top: 10px;
+    left: -27px;
+}
+
+input#search_input_react {
+    background-color: rgba(53,53,53,1);
 }
 
 .homeContainer {
