--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -192,3 +192,28 @@ h6 {
 @media only screen and (min-width: 1400px) {}
 
 @media only screen and (min-width: 1500px) {}
+
+@media only screen and (max-width: 1024px) {
+    .fixedHeaderContainer a, .navigationWrapper .slidingNav .nav-site a {
+        padding: 5px;
+    }
+    .reactNavSearchWrapper input#search_input_react {
+        background-color: rgba(53,53,53,1);
+    }
+    .nav-site.nav-site-internal {
+        border-top: 1px solid #eee;
+    }
+}
+@media only screen and (max-width: 735px) {
+    .imageAlignSide .blockImage {
+        display: block;
+        margin-right: 0;
+    }
+    .container .wrapper .alignCenter p {
+        text-align: center;
+    }
+    .projectTitle > small {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+}
