--- a/website/static/css/index.css
+++ b/website/static/css/index.css
@@ -1,26 +1,9 @@
-.homeContainer {}
 
 .homeContainer .section.logo {
-  display: inline-block !important;
-  margin-bottom: 0%;
+  height: 160px;
+  position: relative;
+  top: -50px;
 }
-
-.homeContainer .section.logo>img {
-  width: 35%;
-}
-
-@media(min-width: 480px) {
-  .homeContainer .section.logo>img {
-    width: 100%;
-  }
-}
-
-@media(min-width: 736px) {
-  .homeContainer .section.logo>img {
-    width: 100%;
-  }
-}
-
 .homeContainer .projectTitle {
   color: #fff;
 }
@@ -47,6 +30,8 @@
   height: 100%;
 }
 
-.snapshooterLogoPosition {
-  margin: -50px;
+@media only screen and (max-width: 735px) {
+  .homeContainer .section.logo {
+    top: -30px;
+  }
 }
