Added highlight theme tomorrow nights

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -164,11 +164,11 @@ h6 {
 .copyright {
     padding-bottom: 20px;
 }
-
+/*
 .hljs {
     background-color: #eaeaea;
 }
-
+*/
 .gist {
     background-color: #ffffff;
 }
