--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -93,7 +93,8 @@ input#search_input_react {
 
 .homeContainer.homeSnapshooterContainer {
     background-color: #434546;
-    background: url("../img/bg_motherboard.jpg") center center repeat-x;
+    background: url("../img/bg_motherboard.jpg") center center no-repeat;
+    background-size: cover;
 }
 
 h1,
