--- a/website/static/css/index.css
+++ b/website/static/css/index.css
@@ -8,7 +8,8 @@
   color: #fff;
 }
 
-.pluginWrapper.buttonWrapper>.button {
+.pluginWrapper.buttonWrapper>.button,
+.pluginWrapper.buttonWrapper>.button.button-primary {
   background-color: #d82034;
   color: #fff;
   font-size: 25px;
@@ -17,9 +18,20 @@
   padding: 15px 32px;
 }
 
-.pluginWrapper.buttonWrapper>.button:hover {
+.pluginWrapper.buttonWrapper>.button:hover,
+.pluginWrapper.buttonWrapper>.button.button-primary:hover {
   background: #a11c36;
 }
+
+
+.pluginWrapper.buttonWrapper>.button.button-secondary {
+  background-color: #666666;
+}
+.pluginWrapper.buttonWrapper>.button.button-secondary:hover {
+  background: #555555;
+}
+
+
 
 .mainContainer .darkBackground h2 p {
   /*color: #fbae18;*/
